--- a/src/main/resources/templates/add-concert-form.html
+++ b/src/main/resources/templates/add-concert-form.html
@@ -8,5 +8,14 @@
 <body>
     <h1>Add Concert</h1>
     <!-- add form for adding concert-->
+    <form action = "/concerts" method = "post">
+        <label for ="title">Title:</label>
+        <input type = "text" name = "title" id = "title" required><br><br>
+
+        <label for ="artist">Artist:</label>
+        <input type = "text" name = "artist" id = "artist" required><br><br>
+
+        <input type = "submit" value = "Add Concert">
+    </form>
 </body>
 </html>
